# rsomics-digraph-metrics

./: Cargo.toml  README.md
benches/: bench.rs
src/: cli.rs  lib.rs
tests/: compat.rs
tests/golden/: dag.txt  full.txt  gnp1.txt  gnp2.txt  hand.txt  karate_dir.txt  selfloop_mixed.txt
