[package]
name = "rsomics-digraph-metrics"
version = "0.1.1"
edition = "2021"
description = "Directed-graph structural metrics (overall/node reciprocity, flow hierarchy) — value-exact port of networkx"
license = "MIT OR Apache-2.0"
repository = "https://github.com/omics-rust/rsomics-digraph-metrics"
authors = ["Zane Leong <efd@live.com>"]
categories = ["science", "command-line-utilities"]
keywords = ["bioinformatics", "graph", "network", "reciprocity", "networkx"]
readme = "README.md"

[[bin]]
name = "rsomics-digraph-metrics"
path = "src/main.rs"

[lib]
name = "rsomics_digraph_metrics"
path = "src/lib.rs"
doctest = false

[dependencies]
rsomics-common = "0.6"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }
serde_json = "1"

[[bench]]
name = "bench"
harness = false
